deploy/lepro-debug/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lepro-debug
  labels:
    app.kubernetes.io/name: lepro-debug
