deploy/lepro-debug/k8s/service-nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: lepro-cert-cdn
  namespace: lepro-debug
  labels:
    app: lepro-cert-cdn
spec:
  selector:
    app: lepro-cert-cdn
  ports:
    - name: http
      port: 80
      targetPort: http
    - name: https
      port: 443
      targetPort: https
